--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "haxor" # "air", "aqua", "contrast", "dark", "dirt", 
 
 # Site Settings
 locale                   : "en-US"
-title                    : "snowscan.io"
+title                    : "eRny Hidalgo"
 title_separator          : "-"
 name                     : "Snowscan"
-description              : "Posts about security, CTFs and networking"
+description              : "Temas de técnologia y desarrollo paso a paso"
 url                      : "https://ernyhidalgo.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "ernyhidalgo/ernyhidalgo.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
