--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "haxor" # "air", "aqua", "contrast", "dark", "dirt", 
 locale                   : "en-US"
 title                    : "eRny Hidalgo"
 title_separator          : "-"
-name                     : "Snowscan"
+name                     : "eRny Hidalgo"
 description              : "Temas de técnologia y desarrollo paso a paso"
 url                      : "https://ernyhidalgo.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
